# computational-intelligence

./: .gitignore  6-friends.ipynb  LICENSE  LICENSE.md  README.md  bricks.ipynb  connect-four.ipynb  connet-four.ipynb  follow.txt  following.txt  hill-climbing.ipynb  multiple-knapsack.ipynb  one-max.ipynb  pyproject.toml  rastrigin.ipynb  set-covering.ipynb  sudoku.ipynb  table-top.ipynb  tic-tac-toe.ipynb  tsp.ipynb  tsp.py
.github/: environment.yml
.github/workflows/: python-package-conda.yml
.run/: hanabi-client-1.run.xml  hanabi-client-2.run.xml  hanabi-server.run.xml
2021-22/: 6-friends.ipynb  rastrigin.ipynb  tic-tac-toe.ipynb  tic-tac-toe_rl.py
2021-22/contrib/: sudoku-leonardo.ipynb
2021-22/links/: suggested-readings.md
2021-22/project/hanabi/: GameData.py  README.md  client.py  game.py  server.py
2022-23/: 4-friends.ipynb  8-puzzle.ipynb  README.md  bricks.ipynb  diversity.ipynb  gx_utils.py  lab1_set-covering.ipynb  lab2_set-covering+ea.ipynb  lab3_nim-not-working.ipynb  lab3_nim.ipynb  min-sum.ipynb  n-friends.ipynb  one-max.ipynb  pyproject.toml  rastrigin.ipynb  search.ipynb  spare.ipynb  test-function.ipynb  test-problems.ipynb  test.ipynb  tic-tac-toe.ipynb
2022-23/Quarto/: Player.py  Quarto.py  main.py
2022-23/quarto/: main.py  player.py  x.ipynb
2022-23/quarto/quarto/: __init__.py  objects.py  objects2.py
2023-24/: 4-friends.ipynb  Halloween.ipynb  Lab1.txt  README.md  gx_utils.py  lab1.ipynb  lab10-gx.ipynb  lab10.ipynb  lab2.ipynb  lab2_lib.py  lab9.ipynb  lab9_lib.py  my_set_covering.html  my_set_covering.ipynb  pull-request.txt  pyproject.toml  rastrigin.ipynb  set-covering.ipynb  set-covering_2.ipynb  set-covering_ea.ipynb  set-covering_path-search.ipynb  set-covering_single-state.ipynb
2023-24/contrib/: A_star_stochastic.ipynb  CI_n_friends_problem.pptx.REMOVED.git-id  Halloween.ipynb  Prooving the non-solvability of the friends’ problem.pptx  README.md  Search_Problems_Classes.py  Set_Covering.ipynb  setcovering_singlestate.ipynb
2023-24/contrib/set_covering_assignment/: README.md  pyproject.toml  set-covering.ipynb
2023-24/pizza_pub/: README.md  main.py
2023-24/quixo/: game.py  main.py  requirements.txt
2023-24/set-coverings-assignment/: README.md  pyproject.toml  set-covering.ipynb
2024-25/: 1-max.ipynb  6-friends.ipynb  8-puzzle.ipynb  min-sum.ipynb  multiple-knapsack.ipynb  n-puzzle.ipynb  pyproject.toml  rl-1.ipynb  rl-2.ipynb  set-cover 1.1.ipynb  set-cover 1.2.ipynb  set-cover.ipynb  set-cover_ea.ipynb  set-cover_gs1.ipynb  set-cover_lab1.ipynb  set-covering_showdown.csv  set-covering_showdown.ipynb  shortest-path.ipynb  table-top.ipynb  takeover.ipynb  tsp.ipynb
2024-25/cities/: china.csv  italy.csv  russia.csv  us.csv  vanuatu.csv
2024-25/contrib/poetry_installation_guide/: README.md
2024-25/golang-demos/: .gitignore
2024-25/golang-demos/shortest-path/: british-museum.go  go.mod  go.sum  main.go
2024-25/golang-demos/shortest-path/graph/: graph.go
2024-25/golang-demos/shortest-path/randy/: rand.go
2024-25/golang-demos/shortest-path/solvers/: branch-n-bound.go  greedy.go  queue.go  tree-search.go  util.go
2024-25/golang-demos/shortest-path/viz/: colors.go  visual.go
2024-25/golang-demos/tsp/: go.mod  main.go  tsp.go  visual.go
2024-25/project-work/: d3584.py  demo-gxgp.ipynb  problem_1.npz  problem_2.npz  problem_3.npz  problem_4.npz  problem_6.npz  problem_8.npz  symreg.ipynb
2024-25/project-work/data/: problem_5.npz  problem_7.npz
2024-25/project-work/gxgp/: draw.py  gp_common.py  gp_dag.py
2024-25/project-work/src/: README.md
2024-25/symreg/: d3584.py  demo-gxgp.ipynb  problem_0.npz  symreg_user.ipynb
2024-25/symreg/gxgp/: __init__.py  gp_tree.py  node.py  random.py  utils.py
2024-25/t/: scratchpad.ipynb
2025-26/: 2-max-ea.ipynb  2-max.ipynb  8-puzzle.ipynb  8-queen.ipynb  knapsack.ipynb  path.ipynb  pyproject.toml  table-top.ipynb  tsp.ipynb  zebra.ipynb
2025-26/lab2/: problem_g_10.npy  problem_g_100.npy  problem_g_20.npy  problem_g_200.npy  problem_g_50.npy  problem_g_500.npy  problem_r1_10.npy  problem_r1_100.npy  problem_r1_20.npy  problem_r1_200.npy  problem_r1_50.npy  problem_r1_500.npy  problem_r2_10.npy  problem_r2_100.npy  problem_r2_20.npy  problem_r2_200.npy  problem_r2_50.npy  problem_r2_500.npy  test_problem.npy
2025-26/lab3/: problem-creator.ipynb
2025-26/project-work/: problem.ipynb
contrib/: sudoku-leonardo.ipynb
project/: knowledge.py  player_Dumb.py  player_Paolo.py  tournament.py
project/hanabi/: GameAdapter.py  GameData.py  README.md  RandomClient.py  __jnit__.py  client.py  constants.py  game.py  game_wrapper.py  knowledge.py  player_Dumb.py  server.py
test/: TestLCS.py  test_knowledge.py
(+20 files in other folders)
