# Copyright © 2025 Giovanni Squillero <giovanni.squillero@polito.it>
# https://github.com/squillero/computational-intelligence
# Free under certain conditions — see the license for details.

[project]
    name = "CI"
    version = "2025.10"
    description = "Computational Intelligence code"
    readme = "https://github.com/squillero/computational-intelligence/"
    requires-python = ">=3.14"
    dependencies = [
        "icecream>=2.1.8",
        "jupyter>=1.1.1",
        "matplotlib>=3.10.7",
        "networkx>=3.6",
        "tqdm>=4.67.1",
]
