[tool.poetry]
name = "set-covering-assignment"
version = "0.1.0"
description = ""
authors = ["PaolaMts <127331331+PaolaMts@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.25.2"
numpy = "^1.26.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
